--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body {
     margin: 0;
 }
@@ -9,10 +12,15 @@ body {
     "main"
     "footer";
     grid-template-columns: 100vw;
-    grid-template-rows: 10vh 5vh 1fr 20vh;  
+    grid-template-rows: 10vh 5vh 1fr 19vh;  
 }
 h1 {
-    font-size: clamp(0.5rem, 2vw + 1rem, 3rem)
+    font-size: 2rem;
+}
+p {
+    font-size: 2rem;
+    margin: 0;
+
 }
 .header {
     background-color: #ffe600;
@@ -22,33 +30,118 @@ h1 {
     align-items: center;
     padding: 0;
 }
+
+.principal {
+    
+    height: 100%;
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+}
+.principal img {
+    height: 3rem;
+    width: auto;
+}
 .menu {
     background: #ff0000;
     grid-area: menu;
     
 }
 .box {
-    height: 5rem;
-    width: 4rem;
-    background-color: #ffe600;
-    border: 0.1rem solid black;
+    height: 15rem;
+    width: 12rem;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    border-radius: 0.3rem;  
+    box-shadow: 2rem 2rem 3rem rgba(0,0,0,0.2);
+
+} 
+.produto {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    height: 80vw;
+}
+.descricao {
+    display: flex;
+    height: 20%;
+    width: 100%;
+    flex-direction: column; 
+    gap: 1rem;
+
+}
+.box p {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+}
+.nome {
+    overflow: hidden; 
+    white-space: nowrap; 
+    text-overflow: ellipsis; 
+    width: 100%;
+
+}
+.descricao:hover .nome{
+    transition: all 0.1s;
+    color: #0400ff;
+}
+.preco {
+    color:#000000;
+    font-weight: bolder;
+    text-align: center;
+    
+}
+.preco p {
+    font-size: 1.2rem;
+}
+.produto img{
+    width: 80%;
+    height: auto;
+}
+.comprar {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.riscar {
+    text-decoration: line-through black;
+    color: rgb(121, 121, 117);
+}
+.box button {
+    font-size: 1rem;
+    border-radius: 0.3rem;
+    height: 1.7rem;
+    background-color: rgb(231, 100, 60);
+}
+.box button:hover {
+    background-color: rgb(255, 69, 0);
+    cursor: pointer;
 }
 .box:hover {
     transition: all 0.1s ease-in-out;
     cursor: pointer;
+    transform: scale(1.05);
 }
 .main {
-    background: #33ff00;
+    background: #d7d1d1;
     grid-area: main;
     padding: 1rem;
     display: flex; 
     gap: 1rem;
     flex-wrap: wrap;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
    
 }
 .footer {
-    background: #0400ff;
+    background: #ffff00;
     grid-area: footer;
 }
 
@@ -60,23 +153,23 @@ h1 {
         "menu main"
         "footer footer";
         grid-template-columns: 20vw 1fr;
-        grid-template-rows: 15vh 70vh 20vh;
+        grid-template-rows: 15vh 1fr 20vh;
     }
     .header {
-        background: #ff9494;
         grid-area: header;
     }
     .menu {
-    background: #43c53e;
     grid-area: menu;
     
     }
     .main {
-    background: #34b3d3;
     grid-area: main;
     }
+        .box {
+        width: 11rem;
+        height: 13rem;
+    }
     .footer {
-    background: #504eb6;
     grid-area: footer;
     } 
 } 
@@ -88,26 +181,25 @@ h1 {
         "menu main"
         "footer footer";
         grid-template-columns: 10vw 1fr;
-        grid-template-rows: 20vh 70vh 20vh;
+        grid-template-rows: 20vh 1fr 20vh;
     }
     .header {
-        background: #998f8f;
-        grid-area: header;
-        
+        grid-area: header;  
         
     }
+    .principal img{
+        height: 7vh;
+    
+    }
     .menu {
-    background: #00ebf3;
     grid-area: menu;
     
     }
     .main {
-    background: #ad6a91;
     grid-area: main;
-    flex-direction: column;
+    flex-direction: row;
     }
     .footer {
-    background: #ff04d5;
     grid-area: footer;
     } 
 } 
