--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ p {
     grid-area: menu;
     
 }
-.box {
+#box {
     height: 15rem;
     width: 12rem;
     background-color: #ffffff;
@@ -72,7 +72,7 @@ p {
     gap: 1rem;
 
 }
-.box p {
+#box p {
     font-size: 1rem;
     margin: 0;
     padding: 0;
@@ -87,6 +87,7 @@ p {
 .descricao:hover .nome{
     transition: all 0.1s;
     color: #0400ff;
+    text-decoration: underline;
 }
 .preco {
     color:#000000;
@@ -113,22 +114,22 @@ p {
     text-decoration: line-through black;
     color: rgb(121, 121, 117);
 }
-.box button {
+#box button {
     font-size: 1rem;
     border-radius: 0.3rem;
     height: 1.7rem;
     background-color: rgb(231, 100, 60);
 }
-.box button:hover {
+#box button:hover {
     background-color: rgb(255, 69, 0);
     cursor: pointer;
 }
-.box:hover {
+#box:hover {
     transition: all 0.1s ease-in-out;
     cursor: pointer;
     transform: scale(1.05);
 }
-.main {
+#main {
     background: #d7d1d1;
     grid-area: main;
     padding: 1rem;
